namespace Domain
{
    public interface IBonus
    {
        void Add();
        void Discard();
    }
}