namespace Domain
{
    public interface IDamageable
    {
        void TakeDamage();
    }
}