using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Domain
{
    public interface IDie
    {
        void Die();
    }    
}

