namespace Domain
{
    public interface IHitable
    {
        void Hit();
    }
}