namespace Domain
{
    public interface IPickable
    {
        void Pick();
    }
}