using UnityEngine;

namespace Domain
{
    public abstract class SimpleBonus : MonoBehaviour
    {
        [SerializeField] protected float workTime;
    }
}