using UnityEngine;

namespace Domain
{
    public abstract class SimpleObstacle : MonoBehaviour
    {
        [SerializeField] protected int scoreLoss;
    }
}