using UnityEngine;

namespace Domain
{
    public abstract class SimplePickable : MonoBehaviour
    {
        [SerializeField] protected int value;
    }
}