@startuml class-diagram
    interface IHitable {
        void Hit()
    }

    interface IPickable {
        void Pick()
    }
    
    interface IControllable {
        void Move();
        void Jump();
    }

    interface IDamageable {
        void TakeDamage();
    }

    interface IBonus {
        void add(); 
        void discard();
    }

    interface IDie {
        void Die();
    }

    class Player {
        - int score;
        - int lives;
        - List<IBonus> bonuses; 
        - boolean isInvicible; 
        - float invicibleTime;
    }

    class Coin {
        - int value;
    }

    abstract SimpleObstacle {
        - int scoreLoss;
    }

    abstract SimplePickable {
        
    }

    abstract SimpleBonus {
        - float workTime;
    }

    class NonLethalObstacle {
        - int damage; 
    }

    class LethalObstacle {

    }

    class SpeedBonus {
        - float additionalSpeed; 
    }

    class ShieldBonus {
        - int shieldCount; 
    }

    class MagnetBonus {
        - float magnetismRange;
    }

    class LethalObstacle {

    }

    Coin --|> SimplePickable
    SpeedBonus --|> SimpleBonus
    ShieldBonus --|> SimpleBonus
    MagnetBonus --|> SimpleBonus
    LethalObstacle --|> SimpleObstacle
    NonLethalObstacle --|> SimpleObstacle
    NonLethalObstacle --|> IHitable
    IBonus --|> IPickable
    LethalObstacle --|> IHitable
    SpeedBonus --|> IBonus
    ShieldBonus --|> IBonus
    MagnetBonus --|> IBonus
    Coin --|> IPickable 
    Player --|> IControllable
    Player --|> IDamageable
    IBonus --* Player
    Player --|> IDie 
@enduml